--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@ body {
   text-align: center;
   background: linear-gradient(
     94deg,
-    rgba(34, 87, 254, 0.8724440459777661) 13%,
-    rgba(84, 214, 254, 0.8528362028405112) 95%
+    rgba(1, 64, 137, 0.872) 13%,
+    rgba(3, 61, 148, 0.853) 95%
   );
 }
