--- a/src/app.scss
+++ b/src/app.scss
@@ -16,7 +16,6 @@
             padding: 5px 20px;
             background-color: #fafafa;
             color: #020202e1;
-            box-shadow: 7px 7px #0e0e0e;
 
             span {
                 color: #1b78fa;
@@ -142,14 +141,14 @@
         padding: 0;
 
         h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             border: 1px solid black;
-            width: fit-content;
             border-radius: 4px;
             padding: 5px 20px;
             background-color: #fafafa;
             color: #020202e1;
             box-shadow: 7px 7px #0e0e0e;
+            margin: 10px 0;
 
             span {
                 color: #1b78fa;
@@ -178,9 +177,10 @@
                 border: 1px solid black;
                 width: 400px;
                 height: 300px;
-                border-radius: 5px;
+                border-radius: 20px;
                 background-color: #fff;
-                box-shadow: 8px 8px #171717;
+                // box-shadow: 8px 8px #171717;
+                box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
             }
 
             .copy {
@@ -212,7 +212,10 @@
             width: 50vw;
             padding: 25px 40px;
             border: 1px solid black;
-            border-radius: 10px;
+            border-radius: 20px;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
             .merge-shadow {
                 display: flex;
@@ -231,14 +234,14 @@
                 align-items: center;
                 border: 1px solid #939090;
                 border-radius: 10px;
-                padding: 5px 0;
-                margin: 10px;
+                padding: 10px 3px;
+                margin: 5px;
                 transition: all 0.3s ease;
                 cursor: pointer;
 
                 h1 {
-                    margin: 10px;
-                    font-size: 1.3rem;
+                    margin: 5px;
+                    font-size: 1.2rem;
                     transition: all 0.3s ease;
                 }
 
